--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="clear_all_items">Clear all items</string>
     <string name="add_item">Add item</string>
     <string name="dialog_name">Name:</string>
-    <string name="dialog_number">Number:</string>
+    <string name="dialog_number">Quantity:</string>
     <string name="dialog_price">Price:</string>
     <string name="edit_item">Edit item</string>
     <string name="dialog_clear_all_items">Clear all items?</string>
